--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,13 @@
+h1 {
+    display: flex;
+    justify-content: center;
+}
+h2 {
+    display: flex;
+    justify-content: center;
+}
+
+
 /*Contains all the game choices*/
 .choices {
     display: flex;
@@ -23,4 +33,13 @@
     width: 200px;
     background-color: rosybrown;
     font-size: 30px;
+}
+#img {
+    
+    width: 500px;
+    height: 50px;
+}
+#img1 {
+    display: flex;
+    justify-content: center;
 }
