--- a/css/home.css
+++ b/css/home.css
@@ -4,10 +4,22 @@
 h1 {
     display: flex;
     justify-content: center;
+    color:white;
+    font-family: "Bowlby One SC";
+    font-size: 7vh;
+    font-weight: 200;
+    font-style: normal;
+    text-shadow: 4px 4px #19191941;
+    padding-bottom: 0px;
 }
 h2 {
     display: flex;
     justify-content: center;
+    color:white;
+    font-family: "Ubuntu";
+    font-weight: 350;
+    font-style: normal;
+    padding-top: 0px;
 }
 
 
@@ -26,15 +38,19 @@ h2 {
     height: 30px;
     padding: 20px;
     border-radius: 30px;
-    border: 1px solid black;
+    border: 1px solid white;
     background-color: lightgreen;
+
     font-size: 20px;
+    color: white;
+    font-family: "Ubuntu";
+    text-shadow: 0px 2px #00000033;
 }
 
 /*Random*/
 #random {
     width: 200px;
-    background-color: rosybrown;
+    background-color: rgb(255, 189, 82);
     font-size: 30px;
 }
 #img {
