--- a/css/home.css
+++ b/css/home.css
@@ -21,44 +21,34 @@ h2 {
     font-style: normal;
     padding-top: 0px;
 }
+img {
+    max-height: 40vh;
+    max-width: 40vw;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 
-
-/*Contains all the game choices*/
 .choices {
     display: flex;
     justify-content: center;
     gap: 30px
 }
-/*Contain each individual box*/
-.choice {
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 100px;
-    height: 30px;
-    padding: 20px;
+
+#startGameBtn {
+    max-width: fit-content;
+    height: fit-content;
+    padding: 35px;
     border-radius: 30px;
     border: 1px solid white;
-    background-color: lightgreen;
-
-    font-size: 20px;
+    background-color: rgb(255, 189, 82);
+    max-height: fit-content;
+    font-size: 30px;
     color: white;
     font-family: "Ubuntu";
     text-shadow: 0px 2px #00000033;
 }
 
-/*Random*/
-#random {
-    width: 200px;
-    background-color: rgb(255, 189, 82);
-    font-size: 30px;
-}
-#img {
-    
-    width: 500px;
-    height: 50px;
-}
-#img1 {
-    display: flex;
-    justify-content: center;
+#title {
+    padding-bottom: 8vh;
 }
