--- a/css/home.css
+++ b/css/home.css
@@ -48,6 +48,10 @@ img {
     font-family: "Ubuntu";
     text-shadow: 0px 2px #00000033;
 }
+#startGameBtn:hover {
+    background-color: gold;
+    padding: 40px;
+}
 
 #title {
     padding-bottom: 8vh;
