--- a/css/chess.css
+++ b/css/chess.css
@@ -20,7 +20,7 @@
     
 }
 .a:hover,.b:hover {
-    background-color:darkseagreen ;
+    background-color:rgb(174, 255, 174) ;
 }
 .a {
     background-color: honeydew;
