--- a/css/chess.css
+++ b/css/chess.css
@@ -2,11 +2,18 @@
     background-color: darkcyan;
 }
 #board {
-    
+    margin-left: auto;
+    margin-right: auto;
     background-color: black;
-    
-
 }
+#turnMessages {
+    font-size: 5vh;
+    color: aliceblue;
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+
 .a, .b {
     border: 1px solid black;
     width: 75px;
