--- a/css/home.css
+++ b/css/home.css
@@ -16,7 +16,7 @@ h2 {
     display: flex;
     justify-content: center;
     color:white;
-    font-family: "Ubuntu";
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 350;
     font-style: normal;
     padding-top: 0px;
