--- a/css/chess.css
+++ b/css/chess.css
@@ -5,6 +5,7 @@
     margin-left: auto;
     margin-right: auto;
     background-color: black;
+    
 }
 #turnMessages {
     font-size: 5vh;
@@ -12,7 +13,19 @@
     text-align: center;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-
+#flip {
+    max-width: fit-content;
+    height: fit-content;
+    padding: 15px;
+    border-radius: 10px;
+    border: 1px solid white;
+    background-color: rgb(255, 189, 82);
+    max-height: fit-content;
+    font-size: 30px;
+    color: white;
+    font-family: "Ubuntu";
+    text-shadow: 0px 2px #00000033;
+}
 
 .a, .b {
     border: 1px solid black;
