--- a/css/chess.css
+++ b/css/chess.css
@@ -1,12 +1,12 @@
 * {
     background-color: darkcyan;
 }
-#board {
+#board, #mineboard {
     margin-left: auto;
     margin-right: auto;
-    background-color: black;
     
 }
+
 #turnMessages {
     font-size: 5vh;
     color: aliceblue;
@@ -26,8 +26,21 @@
     font-family: "Ubuntu";
     text-shadow: 0px 2px #00000033;
 }
+#viewMines {
+    max-width: fit-content;
+    height: fit-content;
+    padding: 15px;
+    border-radius: 10px;
+    border: 1px solid white;
+    background-color: rgb(255, 189, 82);
+    max-height: fit-content;
+    font-size: 30px;
+    color: white;
+    font-family: "Ubuntu";
+    text-shadow: 0px 2px #00000033;
+}
 
-.a, .b {
+.a, .b,.c {
     border: 1px solid black;
     width: 75px;
     height: 75px;
@@ -46,4 +59,7 @@
 }
 .b {
     background-color: tan;
+}
+.c {
+    background-color:  rgb(173, 164, 130);
 }
