--- a/css/index.css
+++ b/css/index.css
@@ -35,6 +35,25 @@ img {
     gap: 30px
 }
 
+#settingsWindow {
+    position: sticky;
+    top: 10vh;
+    bottom: 10vh;
+    min-height: fit-content;
+    min-width: fit-content;
+
+    height:80vh;
+    width:80vw;
+    margin-left: auto;
+    margin-right: auto;
+
+    visibility: visible;
+
+
+    background-color: white;
+    /* display: none; */
+}
+
 #startGameBtn {
     max-width: fit-content;
     height: fit-content;
