--- a/css/index.css
+++ b/css/index.css
@@ -56,8 +56,20 @@ img {
 #title {
     padding-bottom: 8vh;
 }
+
+#sliderbox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    font-size: 30px;
+    color: white;
+    font-family: "Ubuntu";
+    text-shadow: 0px 2px #00000033;
+}
 #slide {
     max-width: fit-content;
     height: fit-content;
+
     
 }
